<!--
  ~ /*
  ~  *
  ~  *  This project was submitted by Arushi Pant as part of the Android Developer Nanodegree at Udacity.
  ~  *
  ~  *  As part of Udacity Honor code, your submissions must be your own work, hence
  ~  *  submitting this project as yours will cause you to break the Udacity Honor Code
  ~  *  and the suspension of your account.
  ~  *
  ~  *  I, the author of the project, allow you to check the code as a reference, but if
  ~  *  you submit it, it's your own responsibility if you get expelled.
  ~  *
  ~  *  Besides the above notice, the MIT license applies and this license notice
  ~  *  must be included in all works derived from this project
  ~  *
  ~  *  Copyright (c) 2018 Arushi Pant
  ~  *
  ~  */
  -->

<resources>
    <string name="app_name">Red Hot Oven</string>
    <!-- About -->
    <string name="desc_oven">Let\'s Bake!</string>
    <string name="lbl_author">Coded by:</string>
    <string name="author">Arushi Pant</string>
    <string name="lbl_git">Code hosted in</string>
    <string name="link_lbl_git"><u>Github</u></string>
    <string name="link_git">https://github.com/arushi26/android-developer-nanodegree/tree/master/proj4-bakingapp</string>

    <string name="divider">- - - - - - - - - -</string>
    <string name="text_credits_start">Oven baking icon made by</string>
    <string name="link_lbl_monkik"><u>monkik</u></string>
    <string name="link_monkik">https://www.flaticon.com/authors/monkik</string>
    <string name="text_from">from</string>
    <string name="link_lbl_flaticon"><u>www.flaticon.com</u></string>
    <string name="link_flaticon">https://www.flaticon.com/</string>
    <string name="licensed_by">is licensed by</string>
    <string name="link_license">http://creativecommons.org/licenses/by/3.0/</string>
    <string name="link_lbl_license"><u>CC 3.0 BY</u></string>

    <!-- Widget -->
    <string name="appwidget_text">Let\'s Bake!</string>

    <!-- Other labels & text -->
    <string name="lbl_ingredients">Ingredients</string>
    <string name="desc_dessert">Dessert recipe</string>
    <string name="lbl_servings">Servings:</string>
    <string name="text_default_servings">-</string>
    <string name="lbl_steps">Steps</string>
    <string name="desc_description">Description</string>
    <string name="text_transition_img">image_</string>
    <string name="text_pager_step">Step</string>
    <string name="desc_view_step_details">View Step Details</string>

    <!-- Errors -->
    <string name="error_no_data">Data not available</string>

    <!-- Menu -->
    <string name="menu_about">About</string>

    <!-- Exoplayer -->
    <string name="player_rewind">Rewind</string>
    <string name="player_play">Play</string>
    <string name="player_pause">Rewind</string>
    <string name="player_ffwd">Fast Forward</string>
    <string name="player_toggle_fullscreen">Toggle Fullscreen</string>

</resources>
