<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /*
  ~  *
  ~  *  This project was submitted by Arushi Pant as part of the Android Developer Nanodegree at Udacity.
  ~  *
  ~  *  As part of Udacity Honor code, your submissions must be your own work, hence
  ~  *  submitting this project as yours will cause you to break the Udacity Honor Code
  ~  *  and the suspension of your account.
  ~  *
  ~  *  I, the author of the project, allow you to check the code as a reference, but if
  ~  *  you submit it, it's your own responsibility if you get expelled.
  ~  *
  ~  *  Besides the above notice, the MIT license applies and this license notice
  ~  *  must be included in all works derived from this project
  ~  *
  ~  *  Copyright (c) 2018 Arushi Pant
  ~  *
  ~  */
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dessert_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/iv_dessert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:tint="#11000000"
                android:scaleType="fitXY"
                android:contentDescription="@string/desc_dessert"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:layout_scrollFlags="scroll|snap"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/content_recipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.CardView
                android:id="@+id/card_ingredients"
                style="@style/AppTheme.Card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/lbl_ingredients"
                        android:text="@string/lbl_ingredients"
                        style="@style/AppTheme.CardLabel"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/lbl_servings"
                        style="@style/AppTheme.CardLabel"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:text="@string/lbl_servings"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="@id/lbl_ingredients"
                        app:layout_constraintEnd_toStartOf="@id/tv_servings"
                        android:layout_marginRight="5dp" />
                    <TextView
                        android:id="@+id/tv_servings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@id/lbl_servings"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/text_default_servings"/>

                    <View
                        android:id="@+id/divider_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/colorAccent"
                        app:layout_constraintTop_toBottomOf="@id/lbl_ingredients"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="3dp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/divider_ingredients"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"/>
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/card_steps"
                style="@style/AppTheme.Card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_ingredients"
                app:layout_constraintBottom_toBottomOf="parent">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/lbl_steps"
                        android:text="@string/lbl_steps"
                        style="@style/AppTheme.CardLabel"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/divider_steps"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/colorAccent"
                        app:layout_constraintTop_toBottomOf="@id/lbl_steps"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="3dp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/divider_steps"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>